@@ -32,7 +32,7 @@ public class UploadFileFilenameProcessor {
             // UF - Upload File - This is the Upload file which represents the File which is ingested by ARM.
             // 6a374f19a9ce7dc9cc480ea8d4eca0fb_04e6bc3b-952a-79b6-8362-13259aae1895_1_uf.rsp
             if (tokens.size() == NUMBER_OF_TOKENS) {
-                hashcode = tokens.get(0);
+                hashcode = tokens.getFirst();
                 hashcode2 = tokens.get(1);
                 status = tokens.get(2);
             } else {
